[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmon"
version = "0.1.0"
description = "Temperature monitoring server daemon"
requires-python = ">=3.11"
dependencies = ["pyserial"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
tmon = "tmon.daemon:main"

[tool.pytest.ini_options]
markers = ["integration: end-to-end tests requiring socat + simulator"]

[tool.setuptools.packages.find]
where = ["src"]
